tests/fixtures/negative/metrics/slo-rules/core/src/main/kotlin/com/example/core/CoreSloInput.kt
package com.example.core

fun buildReleaseLabel(label: String): String = label.trim()
